// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontMinSize renders 0 1`] = `
Array [
  .c0 {
  font-min-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders function 1`] = `
Array [
  .c0 {
  font-min-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders invalid theme path 1`] = `
Array [
  .c0 {
  font-min-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders negative number 1`] = `
Array [
  .c0 {
  font-min-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-min-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-min-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-min-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-min-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-min-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-min-size: July;
}

@media May {
  .c0 {
    font-min-size: August;
  }
}

@media April {
  .c0 {
    font-min-size: September;
  }
}

@media January {
  .c0 {
    font-min-size: November;
  }
}

@media April {
  .c0 {
    font-min-size: August;
  }
}

@media June {
  .c0 {
    font-min-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: July;
}

@media May {
  .c0 {
    font-min-size: August;
  }
}

@media April {
  .c0 {
    font-min-size: September;
  }
}

@media January {
  .c0 {
    font-min-size: November;
  }
}

@media April {
  .c0 {
    font-min-size: August;
  }
}

@media June {
  .c0 {
    font-min-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-min-size: November;
  }
}

@media April {
  .c0 {
    font-min-size: January;
  }
}

@media January {
  .c0 {
    font-min-size: December;
  }
}

@media April {
  .c0 {
    font-min-size: April;
  }
}

@media June {
  .c0 {
    font-min-size: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-min-size: November;
  }
}

@media April {
  .c0 {
    font-min-size: January;
  }
}

@media January {
  .c0 {
    font-min-size: December;
  }
}

@media April {
  .c0 {
    font-min-size: April;
  }
}

@media June {
  .c0 {
    font-min-size: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-min-size: July;
  }
}

@media April {
  .c0 {
    font-min-size: August;
  }
}

@media January {
  .c0 {
    font-min-size: September;
  }
}

@media April {
  .c0 {
    font-min-size: November;
  }
}

@media June {
  .c0 {
    font-min-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-min-size: July;
  }
}

@media April {
  .c0 {
    font-min-size: August;
  }
}

@media January {
  .c0 {
    font-min-size: September;
  }
}

@media April {
  .c0 {
    font-min-size: November;
  }
}

@media June {
  .c0 {
    font-min-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-min-size: January;
  }
}

@media April {
  .c0 {
    font-min-size: December;
  }
}

@media January {
  .c0 {
    font-min-size: April;
  }
}

@media April {
  .c0 {
    font-min-size: May;
  }
}

@media June {
  .c0 {
    font-min-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-min-size: January;
  }
}

@media April {
  .c0 {
    font-min-size: December;
  }
}

@media January {
  .c0 {
    font-min-size: April;
  }
}

@media April {
  .c0 {
    font-min-size: May;
  }
}

@media June {
  .c0 {
    font-min-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders postitive number 1`] = `
Array [
  .c0 {
  font-min-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders string 1`] = `
Array [
  .c0 {
  font-min-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMinSize renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontMinSize renders valid theme path 1`] = `
Array [
  .c0 {
  font-min-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-min-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
